[package]
name = "antilope"
version = "0.1.0"
authors = ["SamHSmith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.16.0"
vulkano-win = "0.16.0"
vulkano-shaders = "0.16.0"
winit = "0.19"
image = "0.21"
[dependencies.gltf]
version = "0.15"