[package]
name = "antelope"
version = "0.1.0"
authors = ["SamHSmith <13868670+SamHSmith@users.noreply.github.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
vulkano = "0.18.0"
vulkano-shaders = "0.18.0"
image = "0.21"
cgmath = "0.17.0"
conbox = "0.1.0"
crossvulkan = {path="../crossvulkan", features = ["vulkano-support"]}
vk-sys = "0.5.1"

[dependencies.glfw]
git="https://github.com/PistonDevelopers/glfw-rs.git"
default-features = true
features=["vulkan"]

[dependencies.gltf]
version = "0.15"
